<resources>
    <string name="app_name">GuideForPUBGMobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">PUBG GUIDE</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- Drawer Menu items-->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_weapons">Weapons</string>
    <string name="menu_maps">Maps</string>
    <string name="menu_vehicles">Vehicles</string>
    <string name="menu_attachments">Attachments</string>
    <string name="menu_ammunition">Ammunition</string>
    <string name="menu_consumables">Consumables</string>
    <string name="menu_throwables">Throwables</string>
    <string name="menu_armors">Armors</string>
    <string name="menu_helmets">Helmets</string>
    <string name="menu_back_packs">BackPacks</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
